@@ -211,7 +211,7 @@ The charged species momentum equation can be written as:
 m_k N_k \frac{d \vec{V}^k}{dt}= C_k N_k (\vec{E}+ \vec{V}^k \times \vec{B}) - \sum_{m}^{m\ne k} \nu_{km} m_k N_k  (\vec{V}^k - \vec{V}^m) - \vec{\nabla} P_k 
 \end{equation}
 %
-where $\nu_{km}$ is the collision frequency of species $k$ interacting with species $m$. The momentum equation for the charged species can be obtained by assuming that the terms related to inertia change and to collision forces between charged species are negligible compared to the terms related to the collision forces between the charged species and the neutrals \cite{jcp:2011:parent}.
+where $\nu_{km}$ is the collision frequency of species $k$ interacting with species $m$. The momentum equation for the charged species can be obtained by assuming that the terms related to inertia change are negligible compared to collision forces either between the charged species and the neutrals or between charged species \cite{jcp:2011:parent}.
 %
 \begin{equation}
 0= C_k N_k (\vec{E}+ \vec{V}^k \times \vec{B}) - \sum_{m}^{m\ne k} \nu_{km} m_k N_k  (\vec{V}^k - \vec{V}^m) - \vec{\nabla} P_k 
