@@ -9,6 +9,5 @@ double _Te_from_Nk_EoverN(spec_t N, double EoverN);
 
 double _EoverNk_from_Te(long spec, double Te);
 
-double _mueNk_from_Te(long spec, double Te);
 
 #endif
